# ArbShield

./: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  REAL_IMPLEMENTATIONS_SUMMARY.md  SETUP_WALLETCONNECT.md  STYLUS_COMPLETE_GUIDE.md  STYLUS_DEPLOYMENT_GUIDE.md  STYLUS_DEPLOYMENT_SUMMARY.md  STYLUS_FILES_INDEX.md  WALLET_INTEGRATION_SUMMARY.md  deploy.bat  env.ts  package-lock.json  package.json
app/: manifest.ts
circuits/: QUICKSTART.md  README.md  extract_vk.js  generate_vk.sh  multiplier.circom  parity_test.js  run_all_gates.ps1  run_all_gates.sh  test_precompile_parity.js  test_real_proof.js  verify_input_order.js
components/: app-footer.tsx  app-header.tsx  providers.tsx  wallet-connect.tsx
contracts/: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY_SOLIDITY.md  README.md  deploy-passkey-only.js  deploy.js  deployed-addresses.json  foundry.toml  package-lock.json  package.json  test-verify.js
contracts/lib/verifier/: .env.example  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  FINAL_PROBLEM.md  QUICKSTART.md  README.md  REAL_PROBLEM.md  Stylus.toml  deploy.sh  deploy_production.sh  pre-deploy-check.sh  test-deployment.sh  update-frontend.sh
contracts/lib/verifier/src/: lib.rs  main.rs
docs/: BATTLE_READY_CHECKLIST.md  COMPLETE_NAVIGATION.md  DEPLOYED_CONTRACTS.md  DEPLOYMENT_PLAN.md  DEVELOPMENT_STATUS.md  IMPLEMENTATION_ANALYSIS.md  MIGRATION_GUIDE.md  PRODUCTION_CHECKLIST.md  REAL_DAPP_IMPLEMENTATION.md  REAL_IMPLEMENTATION_GUIDE.md  REAL_ZK_IMPLEMENTATION.md  TROUBLESHOOTING.md  VERIFICATION_ISSUE_ANALYSIS.md  (+1 more)
(+65 files in other folders)
