[package]
name = "arbshield-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.5.0"
alloy-primitives = "0.7.0"
alloy-sol-types = "0.7.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["cdylib"]
